--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".HeroDetailActivity"/>
+        <activity android:name=".ChoseNameActivity"/>
     </application>
 
 </manifest>
