--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".HeroListActivity"/>
         <activity android:name=".HeroDetailActivity"/>
         <activity android:name=".ChoseNameActivity"/>
     </application>
